VM 2015-03-23:
quicktrace : hack to ignore OBJTYPE="NA" only for plateid > 7517 (eboss) 
v5_7_9 (2015-03-10) JEB

uuplotspec: improvements for visual inspection, new database. 
	People can now login with trac.sdss.org username and password and
	save inspections. 
	We did this to visual inspect LRGs and obtain n(z). 

plotsn: coeffs keyword to recover fitsn results for each spectro and each band
plotsn: use dereddened magnitudes in all fits
platesn: same as plotsn

opSnlimits: new slopes derived from the median distribution of slopes, when these were
		let free in a test sample. The slopes are still fixed. 

VM 2015-02-23
opSnlimits : g and i band sn fitting slope changed to -0.32 and -0.36 


QUICKTRACE: Hack to ignore the OBJTYPE='NA' targets to address ticket #2184.

-------------------------------------------------------------------------------
v5_7_6 (2014-11-05) JEB

VM 2014-12-06:
quickextract : adding 'splitsky' to r1 camera for MJD ge 56858 and r2 ge 55300 
readplugmap  : edit for new extinctiion coefficients (Shalfy 2011)
reject_science : removed the last override 'qbad = 0' 

JEB 2014-11-05:
spreduce1d: change redshift range for eboss and sequels plates: 
            from [-0.01,1.] to [-0.01,2.]
spreduce2d: adding splitsky to r1 camera for MJD ge 56858 due to strange 
            behaviour
platemerge: added eBOSS mask bits 
plotspec: added eBOSS mask bits
uuplotspec: added eBOSS mask bits

uubatchpbs: added stderr in each plate folder in addition to stdout

SJB+JEB 2014-10-25:
sdssproc: updated r1 gain for CCD that was replaced summer 2014.

-------------------------------------------------------------------------------
v5_7_5 (2014-10-10) SJB
Missing one commit to trunk for yet another sdss3 -> sdss4 change.
Committing that and tagging again.

-------------------------------------------------------------------------------
v5_7_4 (2014-10-10) SJB
Tag for SOS

SJB 2014-09-22:
sos_runnerd: make robust to blank PLATETYP keyword for bias and darks.