@@ -1,3 +1,7 @@
+SJB 2015-04-13:
+apofix: correct logic when SOS logfile doesn't exist and print more
+	helpful status/error messages.
+
 VM 2015-03-23:
 quicktrace : hack to ignore OBJTYPE="NA" only for plateid > 7517 (eboss) 
 v5_7_9 (2015-03-10) JEB
